[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "whl-logmap"
version = "0.0.1"
description = "wheelos map tool"
readme = "README.md"
authors = [
  { name = "daohu527", email = "daohu527@gmail.com" }
]
urls = { Homepage = "https://github.com/wheelos-tools/whl-logmap", "Bug Tracker" = "https://github.com/wheelos-tools/whl-logmap/issues" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: GIS",
  "Programming Language :: Python :: 3 :: Only"
]
requires-python = ">=3.6"
dependencies = [
  "cyber_record",
  "record_msg",
  "shapely",
  "matplotlib"
]

keywords = ["logmap", "wheelos", "gis", "mapping"]

[project.scripts]
whl_logmap = "whl_logmap.main:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
